# miotywaffles

./: ,gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  project.properties
doc/Bilag/02 Udvælgelse af Komponenter(SW_og_HW)/01 Info om Valgte Komponenter/W1 - Weather/: Weather_API.drawio  Weather_API.drawio.1.crswap  Weather_API.drawio.2.crswap  Weather_API.drawio.crswap  openweathermap_check.py
doc/Bilag/02 Udvælgelse af Komponenter(SW_og_HW)/01 Info om Valgte Komponenter/W2 - Sonos/: sonos_cd.iuml
doc/Bilag/03 Diagrammer/: ClassDiagrams.drawio  ClassDiagrams_2.drawio  RGB_Sensor_ClassDiagrams.drawio  sd-miotywaffles.iuml  sd-miotywaffles.plantuml
doc/Bilag/03 Diagrammer/Hardware - Electrical Schematic/: MIOTYWAFFLES.DSN  MIOTYWAFFLES.PRP  RGB_SENSOR_0.OBK  miotywaffles.opj
doc/Bilag/03_Diagrammer/: RGB_Sensor_ClassDiagrams.drawio  sd-miotywaffles.iuml
doc/Bilag/03_Diagrammer/Hardware - Electrical Schematic/: MIOTYWAFFLES.DSN  RGB_SENSOR.OLB  miotywaffles.opj
doc/Rapport/: ~WRL1858.tmp
src/: README.md  miotywaffles.cpp  pinsettings.h  rgbcolorsensor.cpp  rgbcolorsensor.hpp  sonos.cpp  sonos.hpp  weather.cpp  weather.hpp
src/Actuators/: buzzer.cpp  buzzer.hpp  relay.cpp  relay.h
src/Sensors/: anglesensor.cpp  anglesensor.h  anglesensor.hpp  rgbcolorsensor.cpp  rgbcolorsensor.hpp  touchsensor.cpp  touchsensor.h
src/Settings/: argoncustomfunctions.c  argoncustomfunctions.h  pinsettings.h
src/WebServices/: sonos.cpp  sonos.hpp  weather.cpp  weather.hpp
test/: Fakes.cpp  sonos_test.cpp
(+2 files in other folders)
